Add base role as pre-requisite for optional capabilities

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -28,66 +28,106 @@ participant_verifiable_capabilities:
     name: NetRID Service Provider with intent-based network participant support capability
     description: Participant fulfills testable requirements necessary to provide Intent-based participant support capability according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Intent-based participant support"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Intent-based participant support"
   - id: service_provider_extrapolation
     name: NetRID Service Provider with position extrapolation capability
     description: Participant fulfills testable requirements necessary to provide position extrapolation capability according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Position extrapolation"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Position extrapolation"
   - id: service_provider_operator_id_field
     name: NetRID Service Provider providing operator id data field
     description: Participant fulfills testable requirements necessary to provide operator id data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Operator ID"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Operator ID"
   - id: service_provider_uas_id_serial_number_field
     name: NetRID Service Provider providing UAS ID serial number data field
     description: Participant fulfills testable requirements necessary to provide UAS ID serial number (option 1) data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#UAS ID Serial Number"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#UAS ID Serial Number"
   - id: service_provider_height_field
     name: NetRID Service Provider providing height data field
     description: Participant fulfills testable requirements necessary to provide height data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Height"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Height"
   - id: service_provider_operator_latitude_field
     name: NetRID Service Provider providing operator latitude data field
     description: Participant fulfills testable requirements necessary to provide operator latitude data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Operator Latitude"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Operator Latitude"
   - id: service_provider_operator_longitude_field
     name: NetRID Service Provider providing operator longitude data field
     description: Participant fulfills testable requirements necessary to provide operator longitude data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Operator Longitude"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Operator Longitude"
   - id: service_provider_operational_status_field
     name: NetRID Service Provider providing operational status data field
     description: Participant fulfills testable requirements necessary to provide operational status data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.service_provider#Operational Status"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - service_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.service_provider#Operational Status"
 
   - id: display_provider
     name: NetRID Display Provider
@@ -101,66 +141,106 @@ participant_verifiable_capabilities:
     name: NetRID Display Provider transmitting operator id data field
     description: Participant fulfills testable requirements necessary to transmit operator id data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Operator ID"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Operator ID"
   - id: display_provider_uas_id_serial_number_field
     name: NetRID Display Provider transmitting UAS ID serial number data field
     description: Participant fulfills testable requirements necessary to transmit UAS ID serial number (option 1) data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#UAS ID Serial Number"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#UAS ID Serial Number"
   - id: display_provider_height_field
     name: NetRID Display Provider transmitting height data field
     description: Participant fulfills testable requirements necessary to transmit height data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Height"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Height"
   - id: display_provider_track_direction_field
     name: NetRID Display Provider transmitting track direction data field
     description: Participant fulfills testable requirements necessary to transmit track direction data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Track Direction"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Track Direction"
   - id: display_provider_speed_field
     name: NetRID Display Provider transmitting speed data field
     description: Participant fulfills testable requirements necessary to transmit speed data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Speed"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Speed"
   - id: display_provider_operator_latitude_field
     name: NetRID Display Provider transmitting operator latitude data field
     description: Participant fulfills testable requirements necessary to transmit operator latitude data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Operator Latitude"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Operator Latitude"
   - id: display_provider_operator_longitude_field
     name: NetRID Display Provider transmitting operator longitude data field
     description: Participant fulfills testable requirements necessary to transmit operator longitude data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Operator Longitude"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Operator Longitude"
   - id: display_provider_operational_status_field
     name: NetRID Display Provider transmitting operational status data field
     description: Participant fulfills testable requirements necessary to transmit operational status data field according to F3411-22a.
     verification_condition:
-      requirements_checked:
-        checked:
-          requirement_sets:
-            - "astm.f3411.v22a.display_provider#Operational Status"
+      all_conditions:
+        conditions:
+        - capability_verified:
+            capability_ids:
+              - display_provider
+        - requirements_checked:
+            checked:
+              requirement_sets:
+                - "astm.f3411.v22a.display_provider#Operational Status"
 
   - id: dss_operator
     name: NetRID DSS Operator
