[uss_qualifier/scenarios/astm/utm] Add nominal planning: not permitted conflict with equal priority scenario

--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -33,24 +33,24 @@ actions:
     generator_type: action_generators.flight_planning.FlightPlannerCombinations
     resources:
       flight_planners: flight_planners
-      nominal_planning_selector: nominal_planning_selector?
-      conflicting_flights: conflicting_flights
+      priority_planning_selector: priority_planning_selector?
+      priority_preemption_flights: priority_preemption_flights
       dss: dss
     specification:
       action_to_repeat:
         test_scenario:
-          scenario_type: scenarios.astm.utm.NominalPlanning
+          scenario_type: scenarios.astm.utm.ConflictHigherPriority
           resources:
-            flight_intents: conflicting_flights
-            uss1: uss1
-            uss2: uss2
+            flight_intents: priority_preemption_flights
+            tested_uss: uss1
+            control_uss: uss2
             dss: dss
         on_failure: Continue
-      combination_selector_source: nominal_planning_selector
+      combination_selector_source: priority_planning_selector
       flight_planners_source: flight_planners
       roles:
-      - uss1
-      - uss2
+        - uss1
+        - uss2
   on_failure: Continue
 - action_generator:
     generator_type: action_generators.flight_planning.FlightPlannerCombinations
@@ -62,7 +62,7 @@ actions:
     specification:
       action_to_repeat:
         test_scenario:
-          scenario_type: scenarios.astm.utm.ConflictHigherPriority
+          scenario_type: scenarios.astm.utm.ConflictEqualPriorityNotPermitted
           resources:
             flight_intents: priority_preemption_flights
             tested_uss: uss1
