--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -18,8 +18,8 @@ actions:
   on_failure: Continue
 participant_verifiable_capabilities:
 - id: uspace_netrid_service_provider
-  name: U-Space ASTM NetRID Service Provider
-  description: Participant fulfills testable requirements necessary to act as a NetRID Service Provider according to F3411-22a with additional information required for U-Space.
+  name: U-Space NetRID Service Provider
+  description: Participant fulfills testable requirements necessary to act as a provider of the mandatory NetRID U-space service via the use of ASTM F3411-22a as the primary means of compliance.
   verification_condition:
     all_conditions:
       conditions:
