--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -37,13 +37,9 @@ participant_verifiable_capabilities:
       name: U-space Required Services (work in progress)
       description: Participant fulfills all implemented tests for all testable requirements necessary to provide all required services in U-space.  Note that this test suite is not yet complete, so this capability is not yet a good indication that all testable requirements have been met.
       verification_condition:
-          no_failed_checks: {}
-    - id: network_identification_service
-      name: U-space Network Identification Service
-      description: Participant successfuly passed all tests of all requirements to provide a U-Space Network Identification service.
-      verification_condition:
         all_conditions:
           conditions:
+            - no_failed_checks: {}
             - capability_verified:
                 capability_ids:
                   - service_provider
