Add new requirements to uspace required_services

--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -33,7 +33,9 @@ participant_verifiable_capabilities:
               - service_provider_operational_status_provider # Operational Status
               - display_provider_operator_id_transmitter # Operator Registration
               - display_provider_uas_id_serial_number_transmitter # Serial Number
+              - display_provider_current_position_transmitter # UA Position
               - display_provider_height_transmitter # Height
+              - display_provider_timestamp_transmitter # Timestamp
               - display_provider_track_direction_transmitter # Track
               - display_provider_speed_transmitter # Speed
               - display_provider_operator_position_transmitter # Operator Location
