--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -42,6 +42,5 @@ participant_verifiable_capabilities:
             - no_failed_checks: {}
             - capability_verified:
                 capability_ids:
-                  - service_provider
-                  - display_provider
+                  - uspace_netrid_service_provider
                 capability_location: '$.actions[?(@.test_suite)].test_suite[?(@.suite_type=="suites.uspace.network_identification")]'
