Explicitly mention service_provider and display_provider capabilities

--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -26,6 +26,8 @@ participant_verifiable_capabilities:
         - no_failed_checks: {}
         - capability_verified:
             capability_ids:
+              - service_provider
+              - display_provider
               - service_provider_operator_id_provider # Operator Registration
               - service_provider_uas_id_serial_number_provider # Serial Number
               - service_provider_height_provider # Height
