[requirements/v22a] Add F3411-v22a requirements (#97)
* [rid/v22a] Add requirements

* [rid/v22a] Add requirements A2-6-1,*

* [rid/v22a] Add roles

* capabilities (badges)

* rebase

* Breakdown additional information and add capabilities

* Add U-Space Network Identification suite

* [uss_qualifier] Refactor capability_id to capability_ids and fix last section evaluation

* Revert

* format

* Prefix Table1

* Prefix Table1 requirements and add NET0260

* Combine requirements under the uspace_netrid_service_provider capability

* Add base role as pre-requisite for optional capabilities

* Update monitoring/uss_qualifier/suites/uspace/network_identification.yaml

Co-authored-by: Benjamin Pelletier <BenjaminPelletier@users.noreply.github.com>

* Address PR comments

* Add all optional requirements as capabilities for v22a display provider

* Add new requirements to uspace required_services

* Explicitly mention service_provider and display_provider capabilities

---------

Co-authored-by: Benjamin Pelletier <BenjaminPelletier@users.noreply.github.com>

--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -24,7 +24,7 @@ actions:
       dss: dss
   on_failure: Continue
 - test_suite:
-    suite_type: suites.astm.netrid.f3411_19
+    suite_type: suites.uspace.network_identification
     resources:
       flights_data: flights_data
       service_providers: service_providers
@@ -37,4 +37,10 @@ participant_verifiable_capabilities:
       name: U-space Required Services (work in progress)
       description: Participant fulfills all implemented tests for all testable requirements necessary to provide all required services in U-space.  Note that this test suite is not yet complete, so this capability is not yet a good indication that all testable requirements have been met.
       verification_condition:
-          no_failed_checks: {}
+        all_conditions:
+          conditions:
+            - no_failed_checks: {}
+            - capability_verified:
+                capability_ids:
+                  - uspace_netrid_service_provider
+                capability_location: '$.actions[?(@.test_suite)].test_suite[?(@.suite_type=="suites.uspace.network_identification")]'
