Reorganize netrid package to prepare for v22a documentation

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -12,7 +12,7 @@ actions:
         dss_instances: dss_instances
     on_failure: Continue
   - test_scenario:
-      scenario_type: scenarios.astm.netrid.NominalBehavior
+      scenario_type: scenarios.astm.netrid.v19.NominalBehavior
       resources:
         flights_data: flights_data
         service_providers: service_providers
