--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -7,7 +7,7 @@ resources:
   dss_instances: resources.astm.f3411.DSSInstancesResource
 actions:
   - test_scenario:
-      scenario_type: scenarios.astm.netrid.NominalBehavior
+      scenario_type: scenarios.astm.netrid.v22a.NominalBehavior
       resources:
         flights_data: flights_data
         service_providers: service_providers
