--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -37,11 +37,11 @@ v1:
                     specification:
                         dss_instances:
                             - participant_id: uss1
-                              rid_version: F3411-22a
+                              rid_version: F3411-19
                               base_url: http://host.docker.internal:8082/rid/v2
         action:
             test_suite:
-                suite_type: suites.astm.netrid.f3411_22a
+                suite_type: suites.astm.netrid.f3411_19
                 resources:
                     flights_data: kentland_flights_data
                     service_providers: service_providers
