Fix version and extract config flag change

--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -41,7 +41,7 @@ v1:
                               base_url: http://host.docker.internal:8082/rid/v2
         action:
             test_suite:
-                suite_type: suites.astm.netrid.f3411_19
+                suite_type: suites.astm.netrid.f3411_22a
                 resources:
                     flights_data: kentland_flights_data
                     service_providers: service_providers
