--- a/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
@@ -10,7 +10,7 @@ uspace:
 
 net_rid:
   $ref: '#/common'
-  netrid_service_providers:
+  netrid_service_providers_v19:
     resource_type: resources.netrid.NetRIDServiceProviders
     dependencies:
       auth_adapter: utm_auth
@@ -18,7 +18,15 @@ net_rid:
       service_providers:
       - participant_id: uss1
         injection_base_url: http://localhost:8071/ridsp/injection
-  netrid_observers:
+  netrid_service_providers_v22a:
+    resource_type: resources.netrid.NetRIDServiceProviders
+    dependencies:
+      auth_adapter: utm_auth
+    specification:
+      service_providers:
+      - participant_id: uss1
+        injection_base_url: http://localhost:8081/ridsp/injection
+  netrid_observers_v19:
     resource_type: resources.netrid.NetRIDObserversResource
     dependencies:
       auth_adapter: utm_auth
@@ -26,6 +34,14 @@ net_rid:
       observers:
       - participant_id: uss2
         observation_base_url: http://localhost:8073/riddp/observation
+  netrid_observers_v22a:
+    resource_type: resources.netrid.NetRIDObserversResource
+    dependencies:
+      auth_adapter: utm_auth
+    specification:
+      observers:
+      - participant_id: uss2
+        observation_base_url: http://localhost:8083/riddp/observation
   netrid_observation_evaluation_configuration:
     resource_type: resources.netrid.EvaluationConfigurationResource
     specification: {}
@@ -41,7 +57,18 @@ net_rid:
               - participant_id: uss2
                 rid_version: F3411-19
                 base_url: http://localhost:8082
-
+  netrid_dss_instances_v22a:
+      resource_type: resources.astm.f3411.DSSInstancesResource
+      dependencies:
+          auth_adapter: utm_auth
+      specification:
+          dss_instances:
+              - participant_id: uss1
+                rid_version: F3411-22a
+                base_url: http://localhost:8082/rid/v2/
+              - participant_id: uss2
+                rid_version: F3411-22a
+                base_url: http://localhost:8082/rid/v2/
 net_rid_sims:
   adjacent_circular_flights_data:
     resource_type: resources.netrid.FlightDataResource
