--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -38,7 +38,7 @@ v1:
                         dss_instances:
                             - participant_id: uss1
                               rid_version: F3411-19
-                              base_url: http://host.docker.internal:8082/rid/v2
+                              base_url: http://host.docker.internal:8082
         action:
             test_suite:
                 suite_type: suites.astm.netrid.f3411_19
