Reorganize test actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         make test
       env:
         RID_VERSION: F3411-22a
-        CONFIG_NAME: configurations.dev.uspace
+        CONFIG_NAME: configurations.dev.local_test
     - name: uss_qualifier tests - ASTM NetRID F3411-19 Test Suite
       run: |
         cd monitoring/uss_qualifier
