[uss_qualifier] Switch default ASTM NETRID to v22a and reorganize CI tests (#119)
* [uss_qualifier] Add rid mock v22a and switch local_test default rid version to v22a

* Switch tracer to v22a and remove v19 rid mocks

* Small improvements

* Update configurations and ci.yaml

* Update collect-logs

* Lint

* Port 8084 in not available on github actions host

* Split atproxy deactivation to another PR

* Address PR comments

* Reorganize test actions

* Remove mock_uss_scdsc2

* Switch default RID to v22a

* reverse mock_uss ports v19-v22a

---------

Co-authored-by: Mickaël Misbach <mickael@misba.ch>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,10 +54,20 @@ jobs:
       run: |
         cd monitoring/mock_uss
         make test
-    - name: uss_qualifier tests
+    - name: uss_qualifier tests - U-Space Test Suite
       run: |
         cd monitoring/uss_qualifier
         make test
+      env:
+        RID_VERSION: F3411-22a
+        CONFIG_NAME: configurations.dev.local_test
+    - name: uss_qualifier tests - ASTM NetRID F3411-19 Test Suite
+      run: |
+        cd monitoring/uss_qualifier
+        make test
+      env:
+        RID_VERSION: F3411-19
+        CONFIG_NAME: configurations.dev.netrid_v19
     - name: prober tests
       run: |
         cd monitoring/prober
