--- a/monitoring/uss_qualifier/configurations/dev/environment.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/environment.yaml
@@ -7,7 +7,7 @@ common:
             environment_variable_containing_auth_spec: AUTH_SPEC
 
 net_rid:
-    netrid_service_providers:
+    netrid_service_providers_v19:
         resource_type: resources.netrid.NetRIDServiceProviders
         dependencies:
             auth_adapter: utm_auth
@@ -15,7 +15,15 @@ net_rid:
             service_providers:
                 - participant_id: uss1
                   injection_base_url: http://host.docker.internal:8071/ridsp/injection
-    netrid_observers:
+    netrid_service_providers_v22a:
+        resource_type: resources.netrid.NetRIDServiceProviders
+        dependencies:
+            auth_adapter: utm_auth
+        specification:
+            service_providers:
+                - participant_id: uss1
+                  injection_base_url: http://host.docker.internal:8081/ridsp/injection
+    netrid_observers_v19:
         resource_type: resources.netrid.NetRIDObserversResource
         dependencies:
             auth_adapter: utm_auth
@@ -23,6 +31,14 @@ net_rid:
             observers:
                 - participant_id: uss2
                   observation_base_url: http://host.docker.internal:8073/riddp/observation
+    netrid_observers_v22a:
+        resource_type: resources.netrid.NetRIDObserversResource
+        dependencies:
+            auth_adapter: utm_auth
+        specification:
+            observers:
+                - participant_id: uss2
+                  observation_base_url: http://host.docker.internal:8083/riddp/observation
     netrid_dss_instances_v19:
         resource_type: resources.astm.f3411.DSSInstancesResource
         dependencies:
@@ -35,6 +51,18 @@ net_rid:
                 - participant_id: uss2
                   rid_version: F3411-19
                   base_url: http://host.docker.internal:8082
+    netrid_dss_instances_v22a:
+        resource_type: resources.astm.f3411.DSSInstancesResource
+        dependencies:
+            auth_adapter: utm_auth
+        specification:
+            dss_instances:
+                - participant_id: uss1
+                  rid_version: F3411-22a
+                  base_url: http://host.docker.internal:8082/rid/v2/
+                - participant_id: uss2
+                  rid_version: F3411-22a
+                  base_url: http://host.docker.internal:8082/rid/v2/
 
 f3548:
     flight_planners:
@@ -49,6 +77,7 @@ f3548:
                 # uss2 uses atproxy, with requests being fulfilled by mock_uss with atproxy_client functionality enabled
                 -   participant_id: uss2
                     injection_base_url: http://host.docker.internal:8075/scd
+
     dss:
         resource_type: resources.astm.f3548.v21.DSSInstanceResource
         dependencies:
