[uss_qualifier/scenarios/netrid/dss_interop] Refactor to use test framework and restore v19 execution

--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -34,6 +34,11 @@ net_rid_sims:
         resource_type: resources.netrid.FlightDataStorageResource
         specification:
             flight_record_collection_path: "./output/test_data.usa.netrid.dcdemo_flights.json"
+    kentland_flights_data:
+        resource_type: resources.netrid.FlightDataResource
+        specification:
+            kml_source:
+                kml_location: file://./test_data/usa/kentland/rid.kml
 
 flight_auth:
     $ref: '#/f3548_che'
