--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -2,51 +2,31 @@ v1:
     test_run:
         resources:
             resource_declarations:
-                utm_auth:
-                    resource_type: resources.communications.AuthAdapterResource
-                    specification:
-                        environment_variable_containing_auth_spec: AUTH_SPEC
-                kentland_flights_data:
-                    resource_type: resources.netrid.FlightDataResource
-                    specification:
-                        kml_source:
-                            kml_location: file://./test_data/usa/kentland/rid.kml
-                service_providers:
-                    resource_type: resources.netrid.NetRIDServiceProviders
-                    dependencies:
-                        auth_adapter: utm_auth
-                    specification:
-                        service_providers:
-                            - participant_id: uss1
-                              injection_base_url: http://host.docker.internal:8071/ridsp/injection
-                observers:
-                    resource_type: resources.netrid.NetRIDObserversResource
-                    dependencies:
-                        auth_adapter: utm_auth
-                    specification:
-                        observers:
-                            - participant_id: uss2
-                              observation_base_url: http://host.docker.internal:8073/riddp/observation
-                observation_evaluation_configuration:
-                    resource_type: resources.netrid.EvaluationConfigurationResource
-                    specification: {}
-                dss_pool:
-                    resource_type: resources.astm.f3411.DSSInstancesResource
-                    dependencies:
-                        auth_adapter: utm_auth
-                    specification:
-                        dss_instances:
-                            - participant_id: uss1
-                              rid_version: F3411-19
-                              base_url: http://host.docker.internal:8082
+                $ref: 'resources.yaml#/all'
         action:
             test_suite:
                 suite_type: suites.astm.netrid.f3411_19
                 resources:
                     flights_data: kentland_flights_data
-                    service_providers: service_providers
-                    observers: observers
-                    evaluation_configuration: observation_evaluation_configuration
-                    dss_instances: dss_pool
+                    service_providers: netrid_service_providers_v19
+                    observers: netrid_observers_v19
+                    evaluation_configuration: netrid_observation_evaluation_configuration
+                    dss_instances: netrid_dss_instances_v19
     artifacts:
         "$ref": artifacts.yaml#/relative
+        tested_roles:
+            report_path: output/tested_requirements.html
+            roles:
+              - name: DSS Provider role
+                requirement_set: astm.f3411.v19.dss_provider
+                participants:
+                  - uss1
+                  - uss2
+              - name: Service Provider role
+                requirement_set: astm.f3411.v19.service_provider
+                participants:
+                  - uss1
+              - name: Display Provider role
+                requirement_set: astm.f3411.v19.display_provider
+                participants:
+                  - uss2
