[mock_uss/riddp + uss_qualifier/netrid/observers] Update observation endpoints to use scopes of correct version

--- a/monitoring/uss_qualifier/configurations/dev/environment.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/environment.yaml
@@ -30,6 +30,7 @@ net_rid:
         specification:
             observers:
                 - participant_id: uss2
+                  rid_version: F3411-19
                   observation_base_url: http://host.docker.internal:8073/riddp/observation
     netrid_observers_v22a:
         resource_type: resources.netrid.NetRIDObserversResource
@@ -38,6 +39,7 @@ net_rid:
         specification:
             observers:
                 - participant_id: uss2
+                  rid_version: F3411-22a
                   observation_base_url: http://host.docker.internal:8083/riddp/observation
     netrid_dss_instances_v19:
         resource_type: resources.astm.f3411.DSSInstancesResource
