--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
@@ -60,6 +60,7 @@ v1:
                     specification:
                         observers:
                             -   participant_id: uss8073
+                                rid_version: F3411-19
                                 observation_base_url: http://host.docker.internal:8073/riddp/observation
                 evaluation_configuration:
                     resource_type: resources.netrid.EvaluationConfigurationResource
