--- a/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
@@ -33,6 +33,7 @@ net_rid:
     specification:
       observers:
       - participant_id: uss2
+        rid_version: F3411-19
         observation_base_url: http://localhost:8073/riddp/observation
   netrid_observers_v22a:
     resource_type: resources.netrid.NetRIDObserversResource
@@ -41,6 +42,7 @@ net_rid:
     specification:
       observers:
       - participant_id: uss2
+        rid_version: F3411-22a
         observation_base_url: http://localhost:8083/riddp/observation
   netrid_observation_evaluation_configuration:
     resource_type: resources.netrid.EvaluationConfigurationResource
