[uss_qualifier/scenarios/netrid/dss_interop] Setup execution of v22a

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -7,6 +7,11 @@ resources:
   dss_instances: resources.astm.f3411.DSSInstancesResource
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.DSSInteroperability
+      resources:
+        dss_instances: dss_instances
+    on_failure: Continue
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.NominalBehavior
       resources:
         flights_data: flights_data
