[uss_qualifier] Test NET0260 UAS ID Serial Number

--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -42,4 +42,4 @@ participant_verifiable_capabilities:
               - display_provider_speed_transmitter # Speed
               - display_provider_operator_position_transmitter # Operator Location
               - display_provider_operational_status_transmitter # Operational Status
-            capability_location: '$.actions[?(@.test_suite)].test_suite[?(@.suite_type=="suites.astm.utm.f3411_v22a")]'
+            capability_location: '$..*[?(@.suite_type=="suites.astm.netrid.f3411_22a")]'
