[uss_qualifier] Unit Test Scenario + Test NET0480 Operator ID

--- a/monitoring/uss_qualifier/Makefile
+++ b/monitoring/uss_qualifier/Makefile
@@ -21,6 +21,10 @@ format: format-documentation
 format-documentation:
 	./scripts/format_test_documentation.sh
 
+.PHONY: unit_test
+unit_test:
+	./scripts/run_unit_tests.sh
+
 .PHONY: test
-test: lint
+test: lint unit_test
 	./scripts/test_docker_fully_mocked.sh
