--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -20,6 +20,11 @@ actions:
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
     on_failure: Continue
+report_evaluation_scenario:
+  scenario_type: scenarios.astm.netrid.v22a.AggregateChecks
+  resources:
+    service_providers: service_providers
+    observers: observers
 participant_verifiable_capabilities:
   - id: service_provider
     name: NetRID Service Provider
