Add ISASimple NetRID DSS scenario

--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -12,6 +12,8 @@ v1:
                     observers: netrid_observers_v22a
                     evaluation_configuration: netrid_observation_evaluation_configuration
                     dss_instances: netrid_dss_instances_v22a
+                    id_generator: id_generator
+                    service_area: service_area
     artifacts:
         "$ref": artifacts.yaml#/relative
         tested_roles:
