--- a/monitoring/uss_qualifier/suites/dev/local_test.yaml
+++ b/monitoring/uss_qualifier/suites/dev/local_test.yaml
@@ -15,6 +15,8 @@ resources:
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
   netrid_dss_instances_v22a: resources.astm.f3411.DSSInstancesResource
+  id_generator: resources.interuss.IDGeneratorResource
+  service_area: resources.netrid.ServiceAreaResource
 actions:
 - test_suite:
     suite_type: suites.interuss.generate_test_data
@@ -39,4 +41,6 @@ actions:
       observers: observers
       evaluation_configuration: evaluation_configuration
       netrid_dss_instances: netrid_dss_instances_v22a
+      id_generator: id_generator
+      service_area: service_area
   on_failure: Continue
