--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -5,7 +5,8 @@ resources:
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource
-
+  id_generator: resources.interuss.IDGeneratorResource
+  service_area: resources.netrid.ServiceAreaResource
 actions:
 - test_suite:
     suite_type: suites.astm.netrid.f3411_22a
@@ -15,6 +16,8 @@ actions:
       observers: observers
       evaluation_configuration: evaluation_configuration
       dss_instances: dss_instances
+      id_generator: id_generator
+      service_area: service_area
   on_failure: Continue
 participant_verifiable_capabilities:
 - id: uspace_netrid_service_provider
