Fix overlooked resource definitions

--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -20,8 +20,8 @@ net_rid:
         dependencies:
             auth_adapter: utm_auth
         specification:
-            example_audience: localhost
-            example_scope: rid.display_provider
+            whoami_audience: localhost
+            whoami_scope: rid.display_provider
     service_area:
         resource_type: resources.netrid.ServiceAreaResource
         specification:
